# files-to-prompt

./: Cargo.toml  README.md
.github/workflows/: rust.yaml
src/: cli.rs  core.rs  main.rs
